pulldown-cmark-mdcat/tests/snapshots/render/dumb@commonmark-spec-313-lists.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 122
expression: "render_to_string(markdown_file, &dumb_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/313-lists.md
---
 1. a

 2. b

────────────────────
3. c
────────────────────
